Portfolio Media Query Bug Update
Changed media query class from .row to .portfolio. No change made to layout. When trying to add flex-wrap: wrap; to .portfolio, the layout break to seperate rows.

--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ h3 {
     line-height: 1.5;
   }
 
-  .row {
+  .portfolio {
     flex-direction: row;
   }
 
